lib_LIBRARIES = libphoenix2d_communications.a
libphoenix2d_communications_a_SOURCES = Actions.cpp \
						 Ball.cpp \
						 BeforeKickOff.cpp \
						 Command.cpp \
						 Commands.cpp \
						 Config.cpp \
						 Connect.cpp \
						 Controller.cpp \
						 CornerKickL.cpp \
						 CornerKickR.cpp \
						 Flag.cpp \
						 FreeKickL.cpp \
						 FreeKickR.cpp \
						 Game.cpp \
						 GoalKickL.cpp \
						 GoalKickR.cpp \
						 KickInL.cpp \
						 KickInR.cpp \
						 KickOffL.cpp \
						 KickOffR.cpp \
						 Line.cpp \
						 Logger.cpp \
						 Normal.cpp \
						 Parser.cpp \
						 Player.cpp \
						 PlayMode.cpp \
						 PlayOn.cpp \
						 Position.cpp \
						 Reader.cpp \
						 Self.cpp \
						 Server.cpp \
						 Trainer.cpp \
						 Vector2D.cpp \
						 World.cpp \
						 WorldModel.cpp

